# TaskApplication

./: Dockerfile  README.md  db.init  docker-compose.yaml  docker-compose.yml  package-lock.json  pyproject.toml
api/: .env  Dockerfile  config.py  db.py  main.py  migrate_db.py  migrate_db_cloud.py  pyproject.toml  test.py
api/cruds/: done.py  task.py
api/migrations/: migrate_db.py
api/migrations/tables/: importance.py  priority.py  staff.py  status.py  task.py  task_detail.py
api/migrations/triggers/: task_detail.py
api/models/: task.py
api/modules/common/: model.py  schema.py  service.py  test.http
api/modules/done/: RouterDone.py  SchemaDone.py  ServiceDone.py  models.py
api/modules/importance/: api.py  models.py  schemas.py  service.py
api/modules/staff/: api.py  models.py  schemas.py  service.py
api/modules/status/: RouterStatus.py  api.py  models.py  schemas.py  service.py
api/modules/task/: ModelsTask.py  RouterTask.py  SchemaTask.py  ServiceTask.py  api.py  model.py  models.py  schema.py  schemas.py  service.py
api/modules/task_detail/: model.py  schema.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
api/tests/: test_main.py  test_task.py
scripts/: dev.sh
tests/: test_main.py
web/: .env  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/cypress/e2e/: example.cy.ts  spec_prac.cy.ts  spec_taskAdd.cy.ts
web/src/: App.vue  interfaces.ts  main.ts
web/src/Layout/: Header.vue
web/src/components/: Accordion.vue  AccordionRow.vue  (+14 more)
web/vue-task/: README.md  package.json
(+25 files in other folders)
